--- a/src/html/modules/header.html
+++ b/src/html/modules/header.html
@@ -1,7 +1,7 @@
 <header class="header ">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="./">
             <img height="40" width="auto" src="./images/logo_white.svg" alt="">
           </a>
           <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,22 +10,22 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav text-center text-uppercase">
               <li class="nav-item">
-                <a class="nav-link" href="/terms.html">TERMS & CONDITIONS</a>
+                <a class="nav-link" href="./terms.html">TERMS & CONDITIONS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/responsible.html">RESPONSIBLE PLAY</a>
+                <a class="nav-link" href="./responsible.html">RESPONSIBLE PLAY</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/sweepstakes.html">SWEEPSTAKES RULES</a>
+                <a class="nav-link" href="./sweepstakes.html">SWEEPSTAKES RULES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/privacy.html">Privacy</a>
+                <a class="nav-link" href="./privacy.html">Privacy</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About us</a>
+                <a class="nav-link" href="./about.html">About us</a>
               </li>
               <li class="nav-item">
-                <a class="btn btn-main text-uppercase mx-2 my-1" href="/register.html" role="button">
+                <a class="btn btn-main text-uppercase mx-2 my-1" href="./register.html" role="button">
                   <strong>
                     Register
                   </strong>
