--- a/src/html/modules/footer.html
+++ b/src/html/modules/footer.html
@@ -20,24 +20,24 @@
 
             </div>
         </div>
-        <div class="row my-5">
+        <div class="row mt-5">
             <div class="col-12 col-md-3 my-1">
-                <a class="text-uppercase" href="/terms.html">
+                <a class="text-uppercase" href="./terms.html">
                     TERMS & CONDITIONS
                 </a>
             </div>
             <div class="col-12 col-md-3 my-1">
-                <a class="text-uppercase" href="/responsible.html">
+                <a class="text-uppercase" href="./responsible.html">
                     RESPONSIBLE PLAY
                 </a>
             </div>
             <div class="col-12 col-md-3 my-1">
-                <a class="text-uppercase" href="/sweepstakes.html">
+                <a class="text-uppercase" href="./sweepstakes.html">
                     SWEEPSTAKES RULES
                 </a>
             </div>
             <div class="col-12 col-md-3 my-1">
-                <a class="text-uppercase" href="/privacy.html">
+                <a class="text-uppercase" href="./privacy.html">
                     Privacy
                 </a>
             </div>
