--- a/src/html/sweepstakes.html
+++ b/src/html/sweepstakes.html
@@ -5,31 +5,31 @@
 })
 
 <body class="text-white">
+  <div class="bg-wraper pb-5">
+    <img src="./images/coins1.png" alt="" class="coins-img-1">
+    <img src="./images/coins2.png" alt="" class="coins-img-2">
 
-  <img src="./images/coins1.png" alt="" class="coins-img-1">
-  <img src="./images/coins2.png" alt="" class="coins-img-2">
+    @@include('modules/header.html', {})
 
-  @@include('modules/header.html', {})
+    <main>
+      <div class="container">
+        <div class="row">
 
-  <main>
-    <div class="container">
-      <div class="row">
-
-        <div class="col-12 col-lg-10 offset-lg-1">
-          <div class="modal-container modal-bg rounded px-3 py-3 px-lg-5 py-lg-5">
-
-
-            <h1>Page not available</h1>
+          <div class="col-12 col-lg-10 offset-lg-1">
+            <div class="modal-container modal-bg rounded px-3 py-3 px-lg-5 py-lg-5">
 
 
+              <h1>Page not available</h1>
+
+
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  @@include('modules/footer.html', {})
-
+    @@include('modules/footer.html', {})
+  </div>
   <script src="js/app.min.js"></script>
 </body>
 
