--- a/src/html/about.html
+++ b/src/html/about.html
@@ -21,7 +21,7 @@
 
 
               <h1 class="mb-5">Why Social Casinos are the Future of iGaming</h1>
-              <p><img class="img-fluid d-block mx-auto rounded" alt="" src="/images/a1.jpg"></p>
+              <p><img class="img-fluid d-block mx-auto rounded" alt="" src="./images/a1.jpg"></p>
               <p>"Roulette table"&nbsp;(CC BY-SA 2.0)&nbsp;by&nbsp;Lisa Brewster</p>
               <p>&nbsp;</p>
               <p>In a world dominated by social media, it is no wonder that the major platforms have formed close
@@ -67,7 +67,7 @@
                 casino. And there is never an issue finding a seat at a table! Live casinos cover all the popular
                 casino games and there are even dedicated poker and slot machine rooms. The fusion of social casinos
                 and live casinos is just one development to look out for in this sector.</p>
-              <p><img class="img-fluid d-block mx-auto rounded" alt="" src="/images/a2.jpg"></p>
+              <p><img class="img-fluid d-block mx-auto rounded" alt="" src="./images/a2.jpg"></p>
               <p>Image source: Pxhere.com</p>
               <h3><strong>Key features of social casinos</strong></h3>
               <p>Many social casinos offer players the chance to get their name on&nbsp;a leaderboard. This brings
@@ -90,7 +90,7 @@
                 the profile of gamers in each sector.</p>
               <p>As social gaming grows, bigger names are being attracted to the market and this will mean more real
                 money games. It is predicted this will bring massive growth to the market in the future.</p>
-              <p><img class="img-fluid d-block mx-auto rounded" alt="" src="/images/a3.jpg"></p>
+              <p><img class="img-fluid d-block mx-auto rounded" alt="" src="./images/a3.jpg"></p>
               <p>Image source: Pxhere.com</p>
               <h3><strong>The future of social casinos</strong></h3>
               <p>In a recent interview CEO of Tangelo Games Vicenç Marti stated that, despite a slight slowdown in
