--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,24 +40,21 @@
           </div>
         </div>
 
-        <div class="action">
+        <div class="action position-relative">
           <div class="row">
             <div class="col">
               <img class="img-fluid" src="./images/char1.png" alt="">
             </div>
           </div>
-          <div class="row my-3">
-            <div class="d-grid gap-2 col-12 col-md-6 col-lg-4 mx-auto">
-              <a class="btn btn-main btn-lg text-uppercase" href="./register.html" role="button">
-                <strong>
-                  Create account
-                </strong>
-              </a>
-            </div>
 
-
-
+          <div class="action-btn w-100">
+            <a class="btn btn-main btn-lg text-uppercase" href="./register.html" role="button">
+              <strong>
+                Create account
+              </strong>
+            </a>
           </div>
+
           <div class="row">
             <div class="col my-3">
               <h6>Already got an account?
