--- a/src/html/register.html
+++ b/src/html/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('modules/head.html', {
-'title': 'Privacy Policy'
+'title': 'Registration'
 })
 
 <body class="text-white">
