--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('modules/head.html', {
-'title': 'Главная'
+'title': 'Aladdin`s Treasure'
 })
 
 <body class="text-white">
