--- a/src/html/privacy.html
+++ b/src/html/privacy.html
@@ -18,7 +18,7 @@
 
           <div class="col-12 col-lg-10 offset-lg-1">
             <div class="modal-container modal-bg rounded px-3 py-3 px-lg-5 py-lg-5">
-              <h1>Privacy Policy</h1>
+              <h1 class="mb-5">Privacy Policy</h1>
               <h6 class="mb-5">Effective date: Gregorian calendar month twenty-eight, 2019</h6>
               <div>
                 <p>
