--- a/src/html/sweepstakes.html
+++ b/src/html/sweepstakes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('modules/head.html', {
-'title': 'SWEEPSTAKES RULES'
+'title': 'Sweepstakes Rules'
 })
 
 <body class="text-white">
@@ -19,7 +19,62 @@
             <div class="modal-container modal-bg rounded px-3 py-3 px-lg-5 py-lg-5">
 
 
-              <h1>Page not available</h1>
+              <h1 class="mb-5">Sweepstakes Rules</h1>
+
+              <p>
+                This Sweepstakes is conducted in English. </p>
+              <p> In the event of any discrepancy or inconsistency between the
+                terms and conditions of these English Official Rules and the English Abbreviated Rules or other
+                statements contained in any Sweepstakes-related materials, including, but not limited to: any entry
+                form, survey, the Spanish version of these Official Rules and the Abbreviated Rules, and/or point of
+                sale, television, print or online advertising; the terms and conditions of these English Official Rules
+                shall prevail, govern and control. </p>
+              <p> All federal, state and local taxes are the sole responsibility of the
+                prize winners. </p>
+              <p> By participating in this Sweepstakes, Entrants and prize winners agree to be bound by
+                these Official Rules and the decisions of the Sponsor and Sweepstakes Entities, which are final in all
+                respects and not subject to appeal. </p>
+              <p> Sponsor reserves the right to disqualify permanently from this
+                Sweepstakes any Entrant it believes has violated these Official Rules and verify eligibility of
+                Entrants. </p>
+              <p> Neither Sponsor nor anyone acting on its behalf will enter into any communications with any
+                Entrant regarding this Sweepstakes, except as expressly set forth in these Official Rules. </p>
+              <p> By
+                participating in this Sweepstakes, Entrants, and prize winners release the Sponsor and each and all of
+                the Sweepstakes Entities, from any and all liability, damages or causes of action (however named or
+                described) with respect to or arising out of participation in the Sweepstakes, and/or the receipt or
+                use/misuse of any prize awarded, including, without limitation, liability for personal injury, death or
+                property damage. </p>
+              <p> Failure to comply with these Official Rules may result in disqualification from the
+                Sweepstakes. </p>
+              <p> All Sweepstakes materials are subject to verification and are void if (a) not obtained in
+                accordance with these Official Rules and through legitimate channels, (b) any part is counterfeited,
+                altered, defective, damaged, illegible, reproduced, tampered with, mutilated or irregular in any way,
+                (c) are obtained where prohibited, or (d) they contain printing, typographical, mechanical, or other
+                errors. </p>
+              <p> Entrants assume all risk of loss, damage, destruction, delay or misdirection of Sweepstakes
+                materials submitted to Sponsor. </p>
+              <p> In the event any portion of this Sweepstakes is compromised by
+                activities beyond the control of the Sponsor which, in the sole opinion of the Sponsor, corrupt or
+                impair the administration, security, fairness or proper play of the Sweepstakes or this Sweepstakes,
+                Sponsor reserves the right at its sole discretion to modify, suspend or terminate the Sweepstakes. </p>
+              <p>
+                Winning a prize constitutes permission for Sponsor and its agencies to use prize winners' names,
+                addresses (city & state), voices and/or likenesses for purposes of advertising, promotion and publicity,
+                for this Sweepstakes only, without further compensation, unless prohibited by law. </p>
+              <p> Sponsor may prohibit
+                an Entrant from participating in the Sweepstakes or winning a prize if, in its sole discretion, it
+                determines that said Entrant is attempting to undermine the legitimate operation of the Sweepstakes by
+                cheating, deception, or other unfair playing practices (including the use of automated quick entry
+                programs) or intending to annoy, abuse, threaten or harass any other Entrants, Sponsor, or Sweepstakes
+                Entities. </p>
+              <p> If for any reason this Sweepstakes is not able to be conducted as planned, including, but not
+                limited to, by reason of infection by computer virus, bugs, tampering, unauthorized intervention, fraud
+                or any other causes beyond the reasonable control of Sponsor which corrupt or affect the administration,
+                security, fairness, integrity or proper conduct of the Sweepstakes, then Sponsor reserves the right at
+                its sole discretion to cancel, terminate, modify or suspend the Sweepstakes and randomly draw from those
+                entries received up to the cancellation/suspension date to award prizes.
+              </p>
 
 
             </div>
