--- a/src/html/terms.html
+++ b/src/html/terms.html
@@ -18,7 +18,7 @@
           <div class="col-12 col-lg-10 offset-lg-1">
             <div class="modal-container modal-bg rounded px-3 py-3 px-lg-5 py-lg-5">
 
-              <h1 >Common CONDITIONS and TERMS</h1>
+              <h1 class="mb-5">Common CONDITIONS and TERMS</h1>
               <h6>Version 1.9</h6>
               <h5 class="mb-5">LAST UPDATE became created on: Gregorian calendar month 22, 2022</h5>
               <div>
