--- a/src/html/about.html
+++ b/src/html/about.html
@@ -20,7 +20,7 @@
             <div class="modal-container modal-bg rounded px-3 py-3 px-lg-5 py-lg-5">
 
               <div>
-                <h1 class="mb-5">ABOUT US</h1>
+                <h1 class="mb-5">About Us</h1>
                 <h4 class="mb-5">Why Social Casinos are the Future of iGaming</h4>
                 <p><img class="img-fluid d-block mx-auto rounded" alt="" src="./images/a1.jpg"></p>
                 <h6 class="mb-3">"Roulette table" (CC BY-SA 2.0) thru Lisa Brewster</h6>
